# stream_infer

./: .clang-format  CMakeLists.txt  README.md  anime_postprocess.cpp  avfmt_img.cpp  avfmt_img.h  bufpool.cpp  bufpool.h  dma_alloc.cpp  dma_alloc.h  dmabuf.cpp  dmabuf.h  heaptrack.stream_infer.7264.zst  img_dmabuf.cpp  img_dmabuf.h  lf_queue.hpp  main.cpp  mpp_codec.hpp  mpp_enc.cpp  mpp_enc.h  postprocess.cpp  postprocess.h  rga.cpp  rga.h  rknn.cpp  rknn.h  rtsp.cpp  rtsp.h  threadpool.hpp  utils.cpp  utils.h  v4l2_cap.cpp  v4l2_cap.h  v4l_cap.hpp
asset/: out.h264
model/: tired_relu.rknn
